--- a/touchpad-state-git/PKGBUILD
+++ b/touchpad-state-git/PKGBUILD
@@ -1,14 +1,14 @@
 # Maintainer: Todd Partridge <http://https://github.com/Gen2ly/archpkgs>
 
-pkgname=power-backlight-git
+pkgname=touchpad-state-git
 _pkgname=${pkgname%-*}
-pkgver=0.82.0
+pkgver=0.87.0
 pkgrel=1
-pkgdesc="Set screen backlight brightness dependent on power source type."
+pkgdesc="Set touchpad state; includes udev on-mouse rule."
 arch=("any")
 url="https://github.com/Gen2ly/"$_pkgname"/"
 license=("GPL2")
-depends=("gnome-shell")
+depends=("xf86-input-synaptics")
 makedepends=("git")
 conflicts=("")
 install=
@@ -23,9 +23,8 @@ pkgver() {
 package() {
   cd $srcdir/$_pkgname
   install -Dm755 $_pkgname      "$pkgdir"/usr/bin/$_pkgname
-  install -Dm644 $_pkgname.conf "$pkgdir"/etc/default/$_pkgname.conf
-  install -Dm644 45-"$_pkgname".rules \
-    "$pkgdir"/usr/lib/udev/rules.d/45-"$_pkgname".rules
+  install -Dm644 01-"$_pkgname"-onmouse.rules \
+    "$pkgdir"/usr/lib/udev/rules.d/01-"$_pkgname"-onmouse.rules
   install -Dm644 license.txt \
     "$pkgdir"/usr/share/licenses/$_pkgname/license.txt
 }
