Added daeme package.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
+# reserved backup directories ignore
 _vault
+# local use configuration
 root-directory-cruft
+# package and source directories
+*/pkg
+*/src
+
