--- a/daeme-git/PKGBUILD
+++ b/daeme-git/PKGBUILD
@@ -1,14 +1,14 @@
 # Maintainer: Todd Partridge <https://github.com/Gen2ly/archpkgs>
 
-pkgname=touchpad-state-git
+pkgname=daeme-git
 _pkgname=${pkgname%-*}
-pkgver=0.87.0
+pkgver=
 pkgrel=1
-pkgdesc="Set touchpad state; includes udev on-mouse rule."
+pkgdesc="Basic, extremely-simple, scripts for Digital Audio Extraction (i.e. “ripping”)."
 arch=("any")
 url="https://github.com/Gen2ly/"$_pkgname"/"
 license=("GPL2")
-depends=("xf86-input-synaptics")
+depends=("ripit")
 makedepends=("git")
 conflicts=("")
 install=
@@ -22,11 +22,9 @@ pkgver() {
 
 package() {
   cd $srcdir/$_pkgname
-  install -Dm755 $_pkgname      "$pkgdir"/usr/bin/$_pkgname
-  install -Dm644 01-"$_pkgname"-onmouse.rules \
-    "$pkgdir"/usr/lib/udev/rules.d/01-"$_pkgname"-onmouse.rules
-  install -Dm644 license.txt \
-    "$pkgdir"/usr/share/licenses/$_pkgname/license.txt
+  install -Dm755 $_pkgname   "$pkgdir"/usr/bin/$_pkgname
+  install -Dm755 daefe       "$pkgdir"/usr/bin/daefe
+  install -Dm644 license.txt "$pkgdir"/usr/share/licenses/$_pkgname/license.txt
 }
 
 # vim:set ts=2 sw=2 et:
