--- a/mkinitcpio-unsquashtmpfs-git/PKGBUILD
+++ b/mkinitcpio-unsquashtmpfs-git/PKGBUILD
@@ -1,4 +1,4 @@
-# Maintainer: Todd Partridge <http://https://github.com/Gen2ly/archpkgs>
+# Maintainer: Todd Partridge <https://github.com/Gen2ly/archpkgs>
 
 pkgname=mkinitcpio-unsquashtmpfs-git
 _pkgname=${pkgname%-*}
