--- a/vim-colorscheme-pencil-git/PKGBUILD
+++ b/vim-colorscheme-pencil-git/PKGBUILD
@@ -1,4 +1,4 @@
-# Maintainer: Todd Partridge <http://https://github.com/Gen2ly/archpkgs>
+# Maintainer: Todd Partridge <https://github.com/Gen2ly/archpkgs>
 
 pkgname=vim-colorscheme-pencil-git
 pkgver=r88.b79c517
