--- a/vim-colorschemes-noah/PKGBUILD
+++ b/vim-colorschemes-noah/PKGBUILD
@@ -1,4 +1,4 @@
-# Maintainer: Todd Partridge <http://https://github.com/Gen2ly/archpkgs>
+# Maintainer: Todd Partridge <https://github.com/Gen2ly/archpkgs>
 # alternate colorscheme collection: https://github.com/flazz/vim-colorschemes
 
 pkgname=vim-colorschemes-noah
