--- a/genscripts-git/PKGBUILD
+++ b/genscripts-git/PKGBUILD
@@ -27,18 +27,18 @@ package() {
   install -Dm755 cbin        $pkgdir/usr/bin/cbin
   install -Dm755 cbout       $pkgdir/usr/bin/cbout
   install -Dm755 del         $pkgdir/usr/bin/del
+  install -Dm755 devtop      $pkgdir/usr/bin/devtop
   install -Dm755 dirsize     $pkgdir/usr/bin/dirsize
   install -Dm755 gurl        $pkgdir/usr/bin/gurl
   install -Dm755 largefiles  $pkgdir/usr/bin/largefiles
   install -Dm755 lnk         $pkgdir/usr/bin/lnk
+  install -Dm755 memtop      $pkgdir/usr/bin/memtop
   install -Dm755 pack        $pkgdir/usr/bin/pack
   install -Dm755 pwr         $pkgdir/usr/bin/pwr
   install -Dm755 rps         $pkgdir/usr/bin/rps
   install -Dm755 sortwords   $pkgdir/usr/bin/sortwords
   install -Dm755 termcolors  $pkgdir/usr/bin/termcolors
   install -Dm755 tock        $pkgdir/usr/bin/tock
-  install -Dm755 topdev      $pkgdir/usr/bin/topdev
-  install -Dm755 topmem      $pkgdir/usr/bin/topmem
   install -Dm755 tputcolors  $pkgdir/usr/bin/tputcolors
   install -Dm755 turl        $pkgdir/usr/bin/turl
   install -Dm755 unpack      $pkgdir/usr/bin/unpack
